# struct-inspector

./: .gitignore  .struct.debug.c  CHANGELOG.md  README.md  a.out  flake.nix  main  struct-inspector.cabal  struct-packing-report.cabal  test.c
app/: Main.hs
tests/: bad.c  end.c  good.c  kitchen-sink.c
