cabal-version:      2.4
name:               struct-inspector
version:            0.1.0.0
author:             Owen Shepherd
maintainer:         owen@owen.cafe
extra-source-files: CHANGELOG.md

executable struct-packing-report
    main-is:          Main.hs
    ghc-options:      -Wall
    build-depends:    base ^>=4.15.1.0
                    , language-c
                    , bytestring
                    , pretty
                    , multi-except
                    , dlist-nonempty
                    , process
                    , directory
                    , filepath
                    , utf8-string
                    , optparse-applicative
    hs-source-dirs:   app
    default-language: Haskell2010
